   This column must be able to contain a string of up to 128 characters in length.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 10 to Asterisk 11 --------------------
------------------------------------------------------------------------------

Build System
-------------------
 * The Asterisk build system will now build and install a shared library
   (libasteriskssl.so) used to wrap various initialization and shutdown functions
   from the libssl and libcrypto libraries provided by OpenSSL. This is done so
   that Asterisk can ensure that these functions do *not* get called by any
   modules that are loaded into Asterisk, since they should only be called once
   in any single process. If desired, this feature can be disabled by supplying
   the "--disable-asteriskssl" option to the configure script.

 * A new make target, 'full', has been added to the Makefile.  This performs
   the same compilation actions as make all, but will also scan the entirety of
   each source file for documentation.  This option is needed to generate AMI
   event documentation.  Note that your system must have Python in order for
   this make target to succeed.

 * The optimization portion of the build system has been reworked to avoid
   broken builds on certain architectures.  All architecture-specific
   optimization has been removed in favor of using -march=native to allow gcc
   to detect the environment in which it is running when possible.  This can
   be toggled as BUILD_NATIVE under "Compiler Flags" in menuselect.

 * BUILD_CFLAGS and BUILD_LDFLAGS can now be passed to menuselect, e.g.,
   make BUILD_CFLAGS="whatever" BUILD_LDFLAGS="whatever"

 * Remove "asterisk/version.h" in favor of "asterisk/ast_version.h".  If you
   previously parsed the header file to obtain the version of Asterisk, you
   will now have to go through Asterisk to get the version information.


Applications
-------------------
